--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,10 +27,10 @@
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="wrap_content"
+            android:layout_width="53dp"
             android:layout_height="match_parent"
             android:contentDescription="@string/application_logo"
-            app:srcCompat="@mipmap/torcilingua_logo" />
+            app:srcCompat="@mipmap/app_launcher_foreground" />
     </FrameLayout>
 
     <FrameLayout
