--- a/app/src/main/res/layout/livello.xml
+++ b/app/src/main/res/layout/livello.xml
@@ -75,7 +75,8 @@
         android:gravity="center_vertical"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textColor="#000000" />
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -124,7 +125,8 @@
         android:gravity="center_vertical"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textColor="#000000" />
 
     <com.google.android.material.chip.Chip
         android:id="@+id/nextBut"
