--- a/app/src/main/res/layout/livello.xml
+++ b/app/src/main/res/layout/livello.xml
@@ -76,7 +76,8 @@
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textColor="#000000" />
+        android:textColor="#000000"
+        android:textColorHint="#000000" />
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -126,7 +127,8 @@
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textColor="#000000" />
+        android:textColor="#000000"
+        android:textColorHint="#000000" />
 
     <com.google.android.material.chip.Chip
         android:id="@+id/nextBut"
