--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,6 +45,7 @@
             android:layout_height="match_parent"
             android:text="@string/livello_1"
             android:textAllCaps="true"
+            android:textColor="#000000"
             android:textIsSelectable="false"
             android:textSize="34sp"
             android:textStyle="bold"
@@ -61,6 +62,7 @@
             android:text="@string/completato"
             android:textAllCaps="true"
             android:textColor="#000000"
+            android:textColorHint="#000000"
             android:textStyle="bold"
             android:visibility="invisible" />
 
@@ -101,6 +103,7 @@
             android:layout_height="81dp"
             android:text="@string/livello_2"
             android:textAllCaps="true"
+            android:textColor="#000000"
             android:textIsSelectable="false"
             android:textSize="34sp"
             android:textStyle="bold"
@@ -157,6 +160,7 @@
             android:layout_height="81dp"
             android:text="@string/livello_3"
             android:textAllCaps="true"
+            android:textColor="#000000"
             android:textIsSelectable="false"
             android:textSize="34sp"
             android:textStyle="bold"
@@ -212,6 +216,7 @@
             android:layout_height="81dp"
             android:text="@string/livello_4"
             android:textAllCaps="true"
+            android:textColor="#000000"
             android:textIsSelectable="false"
             android:textSize="34sp"
             android:textStyle="bold"
@@ -267,6 +272,7 @@
             android:layout_height="81dp"
             android:text="@string/livello_5"
             android:textAllCaps="true"
+            android:textColor="#000000"
             android:textIsSelectable="false"
             android:textSize="34sp"
             android:textStyle="bold"
